# AMEngine

./: .gitignore  CMakeLists.txt  README.en.md  README.md
Core/: CMakeLists.txt
Core/Private/: AdApplication.cpp
Core/Private/ECS/: AdEntity.cpp  AdNode.cpp  AdScene.cpp  AdUUID.cpp
Core/Private/ECS/Component/: AdLookAtCameraComponent.cpp  AdPBRMaterialComponent.cpp  AdTransformComponent.cpp
Core/Private/ECS/Component/Material/: AdPBRMaterialComponent.cpp  AdPhongMaterialComponent.cpp
Core/Private/ECS/System/: AdBaseMaterialSystem.cpp  AdGbufferRenderSystem.cpp  AdLightRenderSystem.cpp  AdMaterialSystem.cpp  AdPBRMaterialSystem.cpp  AdParticleInitSystem.cpp  AdParticleRenderSystem.cpp  AdPhongMaterialSystem.cpp  AdSkyBoxSystem.cpp  AdUnlitMaterialSystem.cpp
Core/Private/Gui/Widget/: AdFileBrowserWidget.cpp  AdTransformWidget.cpp  AdWidget.cpp
Core/Private/Loader/: ModelLoader.cpp
Core/Private/Render/: AdMaterial.cpp  AdMesh.cpp  AdRenderContext.cpp  AdRenderTarget.cpp  AdRenderer.cpp  AdSampler.cpp  AdTexture.cpp
Core/Public/: AdApplication.h  AdApplicationContext.h  AdEntryPoint.h
Core/Public/ECS/: AdComponent.h  AdEntity.h  AdNode.h  AdScene.h  AdSystem.h  AdUUID.h
Core/Public/ECS/Component/: AdLightComponent.h  AdLookAtCameraComponent.h  AdSkyBoxComponent.h  AdTransformComponent.h
Core/Public/ECS/Component/Material/: AdBaseMaterialComponent.h  AdMaterialComponent.h  AdPBRMaterialComponent.h  AdPhongMaterialComponent.h  AdUnlitMaterialComponent.h
Core/Public/ECS/System/: AdBaseMaterialSystem.h  AdGbufferRenderSystem.h  AdLightRenderSystem.h  AdMaterialSystem.h  AdPBRMaterialSystem.h  AdParticleInitSystem.h  AdParticleRenderSystem.h  AdPhongMaterialSystem.h  AdSkyBoxSystem.h  AdUnlitMaterialSystem.h
Core/Public/Gui/: AdFontAwesomeIcons.h
Core/Public/Gui/Widget/: AdFileBrowserWidget.h  AdTransformWidget.h  AdWidget.h
Core/Public/Loader/: ModelLoader.h
Core/Public/Render/: AdMaterial.h  AdMesh.h  AdRenderContext.h  AdRenderTarget.h  AdRenderer.h  AdSampler.h  AdTexture.h
Document/: ProblemInDev.md
Editor/: CMakeLists.txt
Editor/Private/: AdEditorApp.cpp
Editor/Private/Window/: AdEditorContentWindow.cpp  AdEditorLayerWindow.cpp  AdEditorMainWindow.cpp  AdEditorPropertyWindow.cpp  AdEditorViewportWindow.cpp
Editor/Private/Windows/: AdEditorContentWindow.cpp  AdEditorLayerWindow.cpp  AdEditorMainWindow.cpp  AdEditorPropertyWindow.cpp  AdEditorSettingWindow.cpp  AdEditorViewportWindow.cpp
Editor/Public/: AdEditorApp.h
Editor/Public/Window/: AdEditorLayerWindow.h  AdEditorMainWindow.h  AdEditorViewportWindow.h
Editor/Public/Windows/: AdEditorContentWindow.h  AdEditorMainWindow.h  AdEditorPropertyWindow.h  AdEditorSettingWindow.h  AdEditorViewportWindow.h
Platform/: CMakeLists.txt
Platform/Private/: AdGeometryUtil.cpp  AdGraphicContext.cpp  AdLog.cpp  AdWindow.cpp
Platform/Private/Event/: AdEventDispatcher.cpp
Platform/Private/Graphic/: AdVKBuffer.cpp  AdVKCommandBuffer.cpp  AdVKComputePipeline.cpp  AdVKDescriptorSet.cpp  AdVKDevice.cpp  AdVKFrameBuffer.cpp  AdVKGraphicContext.cpp  AdVKGraphicPipeline.cpp  AdVKImage.cpp  AdVKImageView.cpp  AdVKPipeline.cpp  AdVKQueue.cpp  AdVKRenderPass.cpp  AdVkSwapchain.cpp
Platform/Private/Window/: AdGLFWwindow.cpp
Platform/Public/: AdEngine.h  AdFileUtil.h  AdGeometryUtil.h  AdGraphicContext.h  AdLog.h  AdWindow.h
Platform/Public/Event/: AdEvent.h  AdEventDispatcher.h  AdEventObserver.h  AdKeyEvent.h  AdMouseEvent.h  AdWindowEvent.h
Platform/Public/Graphic/: AdVKBuffer.h  AdVKCommandBuffer.h  AdVKCommon.h  AdVKComputePipeline.h  AdVKDescriptorSet.h  AdVKDevice.h  AdVKFrameBuffer.h  AdVKGraphicContext.h  AdVKGraphicPipeline.h  AdVKImage.h  AdVKImageView.h  AdVKPipeline.h  AdVKQueue.h  AdVKRenderPass.h  AdVkSwapchain.h
Platform/Public/Window/: AdGLFWwindow.h
Resource/Config/: ImGui.ini
Resource/Model/lisa/: Lisa.mtl
Resource/Shader/: 00_ad_light.comp  00_ad_shader_defines.comp  00_hello_triangle.frag  00_hello_triangle.vert  00_hello_triangle.vert.spv  01_hello_buffer.frag.spv  01_hello_buffer.vert  01_hello_buffer.vert.spv  02_descriptor_set.frag  02_descriptor_set.frag.spv  02_descriptor_set.vert  02_descriptor_set.vert.spv  03_unlit_material.frag  03_unlit_material.frag.spv  03_unlit_material.vert  03_unlit_material.vert.spv  04_phong_material.frag  04_phong_material.frag.spv  04_phong_material.vert  04_phong_material.vert.spv  05_pbr_material.frag  05_pbr_material.vert  gbuffer.frag  gbuffer.vert  light.frag  light.vert  particle_init.comp  skybox.frag  skybox.vert
Sample/: CMakeLists.txt
Sample/00_FirstTriangle/: CMakeLists.txt  Main.cpp
Sample/01_FirstCube/: CMakeLists.txt  Main.cpp
Sample/02_RenderTarget/: CMakeLists.txt  Main.cpp
Sample/03_Texture/: CMakeLists.txt  Main.cpp
Sample/04_ECS_Entity/: CMakeLists.txt  Main.cpp
Sample/MainRender/: CMakeLists.txt  Main.cpp
Sample/SandBox/: AdEventTesting.cpp  AdEventTesting.h  CMakeLists.txt  Main.cpp
cmake/: SPIR-V.cmake
shaders/: gradient.comp
src/: CMakeLists.txt  am_ui.cpp  am_ui.h  camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
